--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,14 +1,15 @@
 {
   "compilerOptions": {
+  	"declaration": true,
+    "declarationDir": "..",
     "jsx": "react",
     "module": "commonjs",
     "noImplicitAny": true,
-    "outDir": "../public/",
+    "outDir": "..",
     "preserveConstEnums": true,
     "removeComments": true,
     "target": "ES6",
-    "lib": ["dom", "es6"],
-    "allowJs": true
+    "lib": ["dom", "es6"]
   },
   "exclude": [
     "node_modules",
