--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  	  "build": "tsc -p src && babel es6 -d .",
+  	  "clean": "rm *.d.ts *.js"
   },
   "author": "Eduardo Niehues",
   "license": "ISC",
@@ -12,5 +13,11 @@
     "@types/whatwg-fetch": "0.0.33",
     "object-assign": "^4.1.1",
     "whatwg-fetch": "^2.0.3"
+  },
+  "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-cli": "^6.24.0",
+    "babel-preset-es2015": "^6.24.0",
+    "typescript": "^2.2.0"
   }
 }
